--- a/tests/index.html
+++ b/tests/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="https://yui-s.yahooapis.com/3.5.0/build/cssbase/cssbase.css" type="text/css" />
 		
 		<script src="https://yui-s.yahooapis.com/3.5.0/build/yui/yui-min.js" type="text/javascript"></script>
-		<script src="run.js" type="text/javascript"></script>
+		<script src="run.js" type="module"></script>
 		
 		<style type="text/css">
 			.setting-current td,
